feat: add Survey.js admin panel with form builder   - Add admin access page with password protection   - Create admin dashboard and form builder page with Survey Creator   - Implement formStorage.js for localStorage-based form management   - Add default form config with 6 sections   - Update Header to show Admin link for admin users

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "survey-core": "^2.3.16",
+    "survey-creator-react": "^2.3.16",
+    "survey-react-ui": "^2.3.16",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
