--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
