feat: integrate Supabase authentication and database   - Create Supabase clients (browser, server, middleware helpers)   - Add root middleware for route protection and session refresh   - Implement auto-deletion function for expired applications (7 days)   - Replace localStorage auth with Supabase Auth in AuthForm   - Replace localStorage auth with Supabase Auth in Header   - Update logout to use Supabase signOut

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@
 *.pem
 
 # project planning (internal)
-PROJECT_PLAN.md
+PLAN.md
 CLAUDE.md
-FRONTEND_PLAN.md
-SURVEY_JS_PLAN.md
 
 # debug
 npm-debug.log*
